# windows-incident-compiler

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_TRUTH_REPORT.md  BUILD.md  CHANGELOG.md  CLEANUP_INVENTORY.txt  CLEANUP_PLAN.md  Cargo.toml  LICENSE  LOCINT_GAP_REPORT.md  MISSION_DONE_REPORT.md  README.md  REAL_RUN_CHECKLIST.md  RELEASE_NOTES.md  REPO_FILE_AUDIT.md  RUNBOOK_VERIFY.md  RUN_PIPELINE_TRUTH_REPORT.md  SENSOR_USAGE_AUDIT.md  SHIP_REPORT.md  STAGE3_SURFACE_VIEW.md  TRUTH_CONTRACT.md  VALIDATION_RUN.md  runB_validation_run_20260114_195345.json.txt  warnings.txt
.github/: PULL_REQUEST_TEMPLATE.md
artifacts/: smoke_report.json
crates/agent-windows/: Cargo.toml
crates/agent-windows/src/: bookmark_manager.rs  capture_windows_rotating.rs  config.rs  evtlog_state.rs  host.rs  lib.rs  main.rs  self_test.rs  telemetry.rs  telemetry_types.rs  wevt_bookmarks.rs  wevt_reader.rs
crates/agent-windows/src/sensors/: attack_surface.rs  collect.rs  defender_adapter.rs  etw_adapter.rs  evidence_deref_example.rs  evtx_collector.rs  lateral_movement_monitor.rs  log_tamper_monitor.rs  mod.rs  powershell_monitor.rs  registry_monitor.rs  service_monitor.rs  sysmon_adapter.rs  sysmon_adapter_ext.rs  task_scheduler_monitor.rs  wmi_monitor.rs
crates/agent-windows/src/sensors/primitives/: archive_tool_exec.rs  auth_event.rs  composite_detectors.rs  credential_access.rs  defense_evasion.rs  discovery_exec.rs  mod.rs  network_connection.rs  persistence_change.rs  process_injection.rs  script_exec.rs  staging_write.rs
crates/core/: Cargo.toml
crates/core/src/: diff.rs  error.rs  event.rs  event_keys.rs  event_validation_test.rs  evidence_ptr.rs  explain.rs  explain_api.rs  install_id.rs  lib.rs  license.rs  license_manager.rs  license_protection.rs  machine_fingerprint.rs  narrative.rs  severity.rs  signal_result.rs  watermark.rs
crates/locald/: Cargo.toml
crates/locald/src/: e2e_playbook_test.rs  edr_locald.rs  evidence_deref.rs  explanation_builder.rs  explanation_reason.rs  hypothesis_controller.rs  lib.rs  main.rs  narrative_builder.rs  pipeline.rs  playbook_loader.rs  playbook_manager.rs  safety.rs  signal_orchestrator.rs  signal_persistence.rs  signal_result.rs  slot_matcher.rs  slot_matcher_tests.rs
crates/locald/src/baseline/: baseline_query.rs  baseline_store.rs  baseline_update.rs  mod.rs  types.rs
crates/locald/src/canonical/: event.rs  fact.rs  scope.rs
crates/locald/src/evidence/: deref.rs  evidence_ptr.rs  evidence_store.rs  mod.rs  path_safety.rs
crates/locald/src/hypothesis/: api.rs  canonical_fact.rs  command_alignment.rs  determinism.rs  explanation.rs  mod.rs  ordering.rs  session.rs  tier0.rs  visibility.rs
crates/locald/src/integrations/: config.rs  export.rs  ingest.rs  metrics.rs  mod.rs  profile.rs  vendor_alert.rs
crates/locald/src/os/: mod.rs
crates/locald/src/os/linux/: mod.rs  signal_engine.rs
crates/locald/src/os/macos/: mod.rs  signal_engine.rs
crates/locald/src/os/windows/: fact_extractor.rs  mod.rs  playbooks.rs  signal_engine.rs  signals_windows.rs
crates/locald/src/scoring/: elliptic_envelope.rs  elliptic_envelope_lite.rs  engine.rs  krim.rs  krim_lite.rs  mahalanobis.rs  mod.rs  scored_signal.rs  scoring_engine.rs
crates/locald/tests/: credibility_locks_tests.rs  golden_replay_test.rs  hypothesis_wiring_test.rs  integration_acceptance.rs  integration_pipeline.rs  pipeline_integration.rs
crates/server/: Cargo.toml
crates/server/bundles/golden/credential_access/cmdline_pattern_002/: manifest.json
crates/server/bundles/golden/credential_access/mimikatz_lsass_001/: manifest.json
crates/server/bundles/golden/defense_evasion/process_hollow_001/: manifest.json
crates/server/bundles/golden/dns_anomaly/tunnel_pattern_001/: manifest.json
crates/server/bundles/golden/edge_cases/cmdline_alignment_005/: manifest.json
crates/server/bundles/golden/edge_cases/imported_namespace_004/: manifest.json
crates/server/bundles/golden/edge_cases/late_arrival_001/: manifest.json
crates/server/src/: bundle_exchange.rs  capability.rs  capture_control.rs  db.rs  diagnostics.rs  diff_api.rs  explain_normalize.rs  flight_recorder.rs  golden_bundle.rs  health.rs  instance_lock.rs  integration_api.rs  lib.rs  license_api.rs  main.rs  playbook_scope.rs  probe.rs  query_isolation.rs  report.rs  run_control.rs  run_coverage.rs  run_db.rs  server_core.rs  supervisor.rs  support_bundle.rs  verification_pack.rs  write_isolation.rs
crates/server/src/services/: baseline.rs  capability.rs  chains.rs  diff.rs  episodes.rs  evidence.rs  evidence_ptrs.rs  export_import.rs  meta.rs  mod.rs  packs.rs  run_brief.rs  run_brief_repo.rs  run_control.rs  signals.rs  types.rs
crates/server/src/team/: aggregate.rs  cases.rs  mod.rs  publish.rs  store.rs
crates/server/tests/: analyst_workflow_tests.rs  bundle_exchange_tests.rs  capture_control_tests.rs  credibility_lock_tests.rs  diagnostics_probe_tests.rs  diff_api_tests.rs  entity_extraction_tests.rs  explain_api_tests.rs  integration_profiles_test.rs  license_api_tests.rs  parity_routes_contract.rs  pdf_report_tests.rs  router_parity_tests.rs  run_persistence_tests.rs  support_bundle_tests.rs  verification_tests.rs
crates/wi-run-all/: Cargo.toml
crates/wi-run-all/src/: main.rs
crates/workbench/: Cargo.toml
crates/workbench/src/: api.rs  document.rs  export.rs  lib.rs  mod.rs  session.rs
src-tauri/: Cargo.toml  README.md  build.rs  loading.html  sanity_check.sh  tauri.conf.json
src-tauri/src/: backend.rs  baseline.rs  capability_exhaust.rs  delta_report.rs  grounded_gates.rs  health_gates.rs  import_types.rs  importer.rs  lib.rs  logging.rs  main.rs  mission_commands.rs  missions.rs  pipeline_counters.rs  port.rs  quality_gates.rs  run_metrics.rs  scenario_profiles.rs  supervisor.rs
src-tauri/src/adapters/: atomic.rs  evtx_json.rs  har.rs  jsonl.rs  mod.rs  nmap.rs  osquery.rs  plaintext.rs  suricata.rs  velociraptor.rs  yara.rs  zap.rs  zeek.rs
src-tauri/src/scenario_packs/: mod.rs  windows.rs
src-tauri/tests/: import_integration_test.rs  test_mission_e2e.ps1  test_real_telemetry_e2e.ps1
(+252 files in other folders)
