[package]
name = "agent-windows"
version = "0.1.0"
edition = "2021"
description = "Windows capture agent using ETW"

[features]
default = []
windows_etw = []

[lib]
name = "agent_windows"
path = "src/lib.rs"

[[bin]]
name = "agent-windows"
path = "src/main.rs"

[[bin]]
name = "capture_windows_rotating"
path = "src/bin/capture_windows_rotating.rs"

[[bin]]
name = "wevt_smoke"
path = "src/bin/wevt_smoke.rs"

[dependencies]
edr-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4"
anyhow = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
ctrlc = "3.4"

# Windows specific
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
    "Win32_System_EventLog",
    "Win32_System_Memory",
    "Win32_Foundation",
] }
