[package]
name = "edr-core"
version = "0.1.0"
edition = "2021"
description = "Shared types and schemas for the attack documentation workbench"

[features]
default = []
pro = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
sha2 = "0.10"
