[package]
name = "edr-core"
version = "0.1.0"
edition = "2021"
description = "Shared types and schemas for the attack documentation workbench"

[features]
default = []
pro = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Licensing
ed25519-dalek = "2"
dirs = "6.0"

# Machine fingerprint
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
