[package]
name = "edr-locald"
version = "0.1.0"
edition = "2021"
description = "EDR local detection daemon - signal orchestration and persistence"

[lib]
name = "edr_locald"
path = "src/lib.rs"

[[bin]]
name = "edr-locald"
path = "src/main.rs"

[[bin]]
name = "proof_run"
path = "src/bin/proof_run.rs"

[[bin]]
name = "metrics_run"
path = "src/bin/metrics_run.rs"

[[bin]]
name = "explain_harness"
path = "src/bin/explain_harness.rs"

[dependencies]
edr-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
nalgebra = "0.32"
hex = "0.4"  # Required by hypothesis module for evidence hashes
thiserror = "1"  # Ship hardening: path validation errors
log = "0.4"      # Ship hardening: logging for path validation
serde_yaml = "0.9"  # Integration layer: config parsing
hostname = "0.4"  # Proof Run: get system hostname
regex = "1"  # Slot matcher: regex-based predicate matching
ctrlc = "3.4"  # Graceful shutdown handling
clap = { version = "4", features = ["derive"] }  # Explain harness: CLI args

[dev-dependencies]
tempfile = "3"
