[package]
name = "edr-server"
version = "0.1.0"
edition = "2021"
description = "HTTP API server for the attack documentation workbench"

[lib]
name = "edr_server"
path = "src/lib.rs"

[[bin]]
name = "edr-server"
path = "src/main.rs"

[[bin]]
name = "golden-cli"
path = "src/bin/golden_cli.rs"

[[bin]]
name = "license_gen"
path = "src/bin/license_gen.rs"

[features]
test-utils = []
pro = ["edr-core/pro"]

[dependencies]
edr-core = { path = "../core" }
workbench = { path = "../workbench" }

# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs", "set-header"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "fs"] }
hyper = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Time/utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Persistence
rusqlite = { version = "0.29", features = ["bundled"] }
dirs = "6.0"

# Error handling
thiserror = "1"  # Ship hardening: write isolation errors

# Hashing
md5 = "0.7"

# PDF generation (pure Rust, no external dependencies)
genpdf = "0.2"

# Bundle export/import
zip = { version = "0.6", default-features = false, features = ["deflate"] }
regex = "1"
sha2 = "0.10"
tempfile = "3"

# License generation (for license_gen binary only)
ed25519-dalek = "2"
rand = "0.8"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"  # Ship hardening: disk free space and uid checks

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
axum-test = "16"
tempfile = "3"
edr-server = { path = ".", features = ["test-utils"] }
