[package]
name = "workbench"
version = "0.1.0"
edition = "2021"
description = "Attack Documentation Workbench - capture, analyze, edit, export"

[dependencies]
edr-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
